more error fixing

--- a/Mate2/Curs#1/main.tex
+++ b/Mate2/Curs#1/main.tex
@@ -124,8 +124,8 @@
         \section{Spatii vectoriale}
         Fie $(V, +)$ un grup abelian si $(K, +, \cdot)$ un corp. Spunem ca V are structura de spatiu vectorial peste corpul K $\iff$
         	\begin{enumerate}
-        		\item $\lambda(v + u)= \lambda v + \lambda u\ \forall \lambda, u \in K, v \in V$
-        		\item $(\lambda + u)v = \lambda  v + uv\ \forall \lambda, u \in K, v \in V$
+        		\item $\lambda(v + u)= \lambda v + \lambda u\ \forall\ \lambda \in K,\ u,v \in V$
+        		\item $(\lambda + u)v = \lambda  v + uv\ \forall\ \lambda \in K,\ u,v \in V$
         		\item $ \lambda u \left(v\right) = \lambda \left(uv\right)$
         		\item $1 \cdot v = v, \forall \ v \in V$
         	\end{enumerate}
